Update file AddressPage, PaymentPage.

--- a/src/pages/user/checkout/PaymentPage/component/ModalChangeDeliveryAddress/styles.css
+++ b/src/pages/user/checkout/PaymentPage/component/ModalChangeDeliveryAddress/styles.css
@@ -4,6 +4,7 @@
 .delivery-address-list .delivery-address-item {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 8px;
 }
 
 .delivery-address-list .delivery-address-item .delivery-address-detail {
