--- a/src/pages/user/checkout/PaymentPage/component/ModalChangeDeliveryAddress/styles.css
+++ b/src/pages/user/checkout/PaymentPage/component/ModalChangeDeliveryAddress/styles.css
@@ -1,14 +1,37 @@
-.delivery-address-list {
+
+.delivery-address-list, .form-create-delivery-address {
+  width: 100%;
+  height: 380px;
+  overflow: hidden;
+  overflow-y: auto;
 }
+
+.delivery-address-list::-webkit-scrollbar {
+  display: none;
+}
+
+.form-create-delivery-address::-webkit-scrollbar {
+  display: none;
+}
+
+/* .delivery-address-list::-webkit-scrollbar {
+  width: 8px;
+}
+
+.delivery-address-list::-webkit-scrollbar-thumb {
+  background: #ccc;
+  border-radius: 5px;
+} */
+
 
 .delivery-address-list .delivery-address-item {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 8px;
+  width: 100%;
 }
 
 .delivery-address-list .delivery-address-item .delivery-address-detail {
-  width: 300px;
+  width: 350px;
   color: #818181;
 }
 
@@ -35,3 +58,30 @@
 .delivery-address-list .delivery-address-item .delivery-address-action:hover {
   color: #40a9ff;
 }
+
+.form-create-delivery-address {
+  box-shadow: rgba(199, 198, 198, 0.35) 0px -10px 36px -28px inset;
+}
+
+.form-create-delivery-address Input {
+  height: 40px;
+}
+
+.ant-form-item {
+  margin-bottom: 20px;
+}
+
+.detail-on-the-map {
+
+}
+
+.ant-modal-wrap .ant-modal {
+  top: 60px
+}
+
+.title-on-the-map {
+  display: flex;
+  padding: 12px;
+  background-color: #fff8e4;
+}
+
